--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -32,7 +32,7 @@
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
                                     <p class="card__titulo">{{Fotografia.nome}}</p>
-                                    <div class="card__texto">
+                                    <div class="card__texto">{{Fotografia.descricao}}
                                         <p class="card__descricao">{{Fotografia.legenda}}</p>
                                         <span>
                                             <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
@@ -42,6 +42,9 @@
                             </li>
                             {% endfor %}
                             {% else %}
+                            <div class="pesquisa_nao_encontrada">
+                                <p>Fotografias não encontradas.</p>
+                            </div>
                             {% endif %}
                         </ul>
                     </div>
