--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -407,7 +407,7 @@ table {
     --bs-alert-border-color: #b6d4fe;
 }
 
-.alert-success {
+.btn btn-success col-12 {
     --bs-alert-color: #0f5132;
     --bs-alert-bg: #d1e7dd;
     --bs-alert-border-color: #badbcc;
@@ -418,3 +418,4 @@ table {
     --bs-alert-bg: #f8d7da;
     --bs-alert-border-color: #f5c2c7;
 }
+
