--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -17,7 +17,7 @@
                             </div>
                             <div>
                                 <a href="{% url 'editar_imagem' fotografia.id %}"><button class="btn btn-success col-12" style="padding: top 5px;">Editar</button></a>
-                                <a></a>
+                                <a href="{% url 'deletar_imagem' fotografia.id %}"><button class="btn btn-danger col-12" style="padding: top 5px;">Deletar</button></a>
 
                             </div>
                         </div>
